Add tax results layout

--- a/core/languages/en.yaml
+++ b/core/languages/en.yaml
@@ -9,6 +9,9 @@ settings: Settings
 income: Enter your income
 status: Marital status
 children: Select children number
+tax: Taxes
+remainder: Remainder
+share: Shares
 save_tax: Save
 language: Languages
 theme: Themes
