--- a/core/languages/fr.yaml
+++ b/core/languages/fr.yaml
@@ -9,6 +9,9 @@ settings: Paramètres
 income: Entrer vos revenus
 status: Statut marital
 children: Saisissez le nombre d'enfants
+tax: Impôts
+remainder: Restant
+share: Parts
 save_tax: Sauvegarder
 language: Langues
 theme: Themes
