Add data bindings

--- a/resources/languages/fr.yaml
+++ b/resources/languages/fr.yaml
@@ -22,7 +22,7 @@ income: Entrer vos revenus
 status: Statut marital
 children: Saisissez le nombre d'enfants
 tax: Impôts
-remainder: Restant
+remainder: Restants
 share: Parts
 save: Sauvegarder
 language: Langues
