--- a/resources/languages/fr.yaml
+++ b/resources/languages/fr.yaml
@@ -28,6 +28,7 @@ save: Sauvegarder
 language: Langues
 theme: Themes
 currency: Devise
+logs: Chemin de logs
 help: Aide
 about: A propos
 author: Auteur
