feat: add reverse tax calculation

--- a/resources/languages/en.yaml
+++ b/resources/languages/en.yaml
@@ -30,6 +30,7 @@ status_list:
     couple: Couple
 children: Select children number
 tax: Taxes
+reverse_tax: Reverse Taxes
 remainder: Remainder
 share: Shares
 save: Save
