--- a/resources/languages/es.yaml
+++ b/resources/languages/es.yaml
@@ -30,6 +30,7 @@ status_list:
     couple: Casado
 children: Seleccione el número de niños
 tax: Impuestos
+reverse_tax: Impuestos Inversos
 remainder: Resto
 share: acciones
 save: Guardar
