--- a/resources/languages/es.yaml
+++ b/resources/languages/es.yaml
@@ -20,6 +20,14 @@ tax_headers:
     header_3: MAXIMO
     header_4: TASA
     header_5: IMPUESTO
+history_headers:
+    header_1: "Fecha"
+    header_2: "Ingreso"
+    header_3: "Pareja"
+    header_4: "Numero de niños"
+    header_5: "Comportamiento"
+yes: "Si"
+no: "No"
 file: Archivo
 settings: Configuración
 update: comprobar actualización
@@ -33,6 +41,7 @@ tax: Impuestos
 reverse_tax: Impuestos Inversos
 remainder: Resto
 share: acciones
+history: Historial
 save: Guardar
 language: Idiomas
 theme: Temas
