--- a/resources/languages/en.yaml
+++ b/resources/languages/en.yaml
@@ -26,6 +26,11 @@ history_headers:
     header_3: "Couple"
     header_4: "Children"
     header_5: "Actions"
+purge_history:
+    confirmTitle: "Confirm"
+    confirm: "Are you sure you want to purge history ?"
+    confirmedTitle: "Purged"
+    confirmed: "History purged"
 export:
     export_title: "Export successful"
     export_message: "Your export is located at this location"
