--- a/resources/languages/es.yaml
+++ b/resources/languages/es.yaml
@@ -14,6 +14,9 @@ abouts:
     text_4: es de código abierto
     text_5: "Desarrollado en Go con el marco Fyne"
     text_6: "Autor"
+save_popup:
+    confirmed_title: "Guardado"
+    confirmed_message: "Guardado en el historial"
 tax_headers:
     header_1: TRAMO
     header_2: MIN
@@ -27,9 +30,9 @@ history_headers:
     header_4: "Numero de niños"
     header_5: "Comportamiento"
 purge_history:
-    confirmTitle: "Confirmar"
+    confirm_title: "Confirmar"
     confirm: "¿ Está seguro de que desea purgar el historial ?"
-    confirmedTitle: "Purgado"
+    confirmed_title: "Purgado"
     confirmed: "Historial purgado"
 export:
     export_title: "Exportación exitosa"
