--- a/resources/languages/fr.yaml
+++ b/resources/languages/fr.yaml
@@ -14,6 +14,9 @@ abouts:
     text_4: "est open-source"
     text_5: "Développé en Go avec le framework Fyne."
     text_6: "Auteur"
+save_popup:
+    confirmed_title: "Sauvegardé"
+    confirmed_message: "Sauvegardé dans l'historique"
 tax_headers:
     header_1: "TRANCHE"
     header_2: "MIN"
@@ -27,9 +30,9 @@ history_headers:
     header_4: "Nombre d'enfants"
     header_5: "Actions"
 purge_history:
-    confirmTitle: "Confirmation"
+    confirm_title: "Confirmation"
     confirm: "Êtes vous sûr de vouloir supprimer l'historique ?"
-    confirmedTitle: "Purge effectué"
+    confirmed_title: "Purge effectué"
     confirmed: "L'historique a été effacé"
 export:
     export_title: "Export réussi"
