--- a/resources/languages/ge.yaml
+++ b/resources/languages/ge.yaml
@@ -14,6 +14,9 @@ abouts:
     text_4: ist Open-Source
     text_5: Entwickelt im Go mit Fyne-Framework.
     text_6: "Autor"
+save_popup:
+    confirmed_title: "Gespeichert"
+    confirmed_message: "Im Verlauf gespeichert"
 tax_headers:
     header_1: TRANCHE
     header_2: MIN
@@ -27,9 +30,9 @@ history_headers:
     header_4: "Anzahl der Kinder"
     header_5: "Aktionen"
 purge_history:
-    confirmTitle: "Bestätigen"
+    confirm_title: "Bestätigen"
     confirm: "Möchten Sie den Verlauf wirklich löschen ?"
-    confirmedTitle: "Gelöscht"
+    confirmed_title: "Gelöscht"
     confirmed: "Verlauf gelöscht"
 export:
     export_title: "Export erfolgreich"
